# video-reader-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT.md  README.md  biome.json  package.json  server.json  tsconfig.json  tsconfig.test.json
.changeset/: README.md  read-video-v0-1.md
.doctrine/: project.json
.github/workflows/: ci.yml  publish-mcp-registry.yml  release.yml
crates/video-reader-cli/: Cargo.toml
crates/video-reader-cli/src/: main.rs
crates/video-reader-core/: Cargo.toml
crates/video-reader-core/src/: asr.rs  envelope.rs  ffprobe.rs  frames.rs  hash.rs  lib.rs  read_video.rs  timeline.rs  video_evidence.rs
crates/video-reader-mcp-server/: Cargo.toml
crates/video-reader-mcp-server/src/: http_transport.rs  lib.rs  main.rs  read_video.rs  tool_routes.rs  video_evidence.rs
crates/video-reader-mcp-server/tests/: video_reader_mcp_differential.rs
docs/adr/: 0001-boundary.md  ADR-3-mcp-family-sota-roadmap.md
docs/roadmap/: sota-family-roadmap.md
docs/specs/: migration-ledger.json  non-llm-read-stack.md  operating-model.md  video-reader-mcp-migration-ledger.json
examples/: read-video-request.json
scripts/: check-no-ts-http-backend.sh  check-ts-adapter-deletion-ready.sh  release-gate.ts  run-video-reader-differential.sh  stage-rust-mcp.ts  sync-server-json.ts
scripts/differential/: video-reader-mcp-oracle.ts
src/: doctor-cli.ts  doctor.ts  index.ts  mcp.ts
src/engine/: rust-asr.ts  rust-frames.ts  rust-timeline.ts  rust-video-evidence.ts
src/handlers/: readVideo.ts  videoEvidence.ts
src/schemas/: readVideo.ts  videoEvidence.ts
src/types/: timeline.ts
src/utils/: asr.ts  errors.ts  exec.ts  ffmpeg.ts  ffprobe.ts  frames.ts  pathUtils.ts  scenes.ts  subtitles.ts
test/: asr.boundary.test.ts  check-no-ts-http-backend.test.ts  corpusManifest.test.ts  doctor.test.ts  errors.test.ts  ffprobe.test.ts  frames.boundary.test.ts  frames.test.ts  httpTransport.matrix.test.ts  readVideo.integration.test.ts  readmeDiscovery.test.ts  releaseGate.test.ts  rustTimeline.boundary.test.ts  scenes.test.ts  shippedPath.matrix.test.ts  subtitles.test.ts  tsAdapterDeletion.matrix.test.ts  videoEvidence.boundary.test.ts
(+8 files in other folders)
