[package]
name = "video-reader-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust timeline assembly, hashing, and cache policy for video-reader-mcp"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.20.0"