[package]
name = "video-reader-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native MCP server for video-reader-mcp (rmcp)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "video-reader-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
rmcp = { version = "0.16.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
video-reader-core = { path = "../video-reader-core" }